# core

./: CMakeLists.txt  build.sh  vcpkg.json
core/: core.c
